Fix front page horizontal scrollbar appearing

--- a/web/static/css/global.styl
+++ b/web/static/css/global.styl
@@ -14,7 +14,7 @@ h1, h2, h3, h4
 	content: attr(data-tooltip)
 	position: absolute
 	top: 100%
-	left: -1em
+	left: -2em
 	white-space: nowrap
 	padding: .5em
 	color: white
